tests/ui/type_checker/invalid/invalid_set_type.aru
func main() {
    mut x: int = 10
    set x = "hello"
}
